# kr-pi

./: .gitignore
Archive/HelloWorld/: CMakeSettings.json
Archive/HelloWorld/UnitTests/: CMakeLists.txt
Archive/Services/HelloWorld/: HelloWorld.service
Archive/Services/HelloWorld/cmake/: gtest_unittestList.cmake
Services/: Services.sln
Services/BudgetWebApp/: README.md  package-lock.json  package.json  quasar.config.js
Services/BudgetWepApp/: .gitignore  BudgetWepApp.njsproj  README.md  package-lock.json  package.json
Services/HelloPython/: HelloPython.py  HelloPython.pyproj  README.md  configure_HelloPython  setup.py
Services/HelloPython/UnitTests/: test_HelloPython.py
Services/HelloPython/env/Scripts/: activate  activate.bat
Services/HelloWorld/: CMakeLists.txt  main.cpp
Services/HelloWorld/UnitTests/: utHelloWorld.cpp
